--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@
 # Test binary, built with `go test -c`
 *.test
 
+# Ignore local env files and build output
+.env
+.env.example
+whisko-server
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
