--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Disable host key checking
-        run: echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
+        run: echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh
 
       - name: SSH Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
