Automate .env file creation in deploy workflow
Replaces manual environment variable exports with automatic .env file generation using GitHub secrets during deployment. This streamlines configuration management and ensures all required variables are set for the application.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,23 +26,29 @@ jobs:
             cd /home/ubuntu/whisko-petcare
             git pull origin main
 
+            echo "Creating .env file from GitHub secrets..."
+            cat > .env << 'EOF'
+            # Server Configuration
+            PORT=${{ secrets.PORT }}
+
+            # MongoDB Configuration
+            MONGO_URI=${{ secrets.MONGO_URI }}
+            MONGO_DATABASE=${{ secrets.MONGO_DATABASE }}
+
+            # PayOS Configuration
+            PAYOS_CLIENT_ID=${{ secrets.PAYOS_CLIENT_ID }}
+            PAYOS_API_KEY=${{ secrets.PAYOS_API_KEY }}
+            PAYOS_CHECKSUM_KEY=${{ secrets.PAYOS_CHECKSUM_KEY }}
+            PAYOS_PARTNER_CODE=${{ secrets.PAYOS_PARTNER_CODE }}
+            PAYOS_BASE_URL=${{ secrets.PAYOS_BASE_URL }}
+            PAYOS_RETURN_URL=${{ secrets.PAYOS_RETURN_URL }}
+            PAYOS_CANCEL_URL=${{ secrets.PAYOS_CANCEL_URL }}
+            EOF
+
             echo "Building Go app..."
             go build -o app
 
             echo "Restarting app..."
             pkill app || true
-            
-            # Export environment variables and run app
-            export PORT=8080
-            export MONGO_URI="$MONGO_URI"
-            export MONGO_DATABASE="$MONGO_DATABASE"
-            export PAYOS_CLIENT_ID="$PAYOS_CLIENT_ID"
-            export PAYOS_API_KEY="$PAYOS_API_KEY"
-            export PAYOS_CHECKSUM_KEY="$PAYOS_CHECKSUM_KEY"
-            export PAYOS_PARTNER_CODE="$PAYOS_PARTNER_CODE"
-            export PAYOS_BASE_URL="$PAYOS_BASE_URL"
-            export PAYOS_RETURN_URL="$PAYOS_RETURN_URL"
-            export PAYOS_CANCEL_URL="$PAYOS_CANCEL_URL"
-            
             nohup ./app > app.log 2>&1 &
             echo "✅ Deployed successfully!"
