Refactor deployment to use env vars directly
Removes creation of .env file and passes environment variables directly from GitHub secrets to docker-compose during deployment. Updates docker-compose.yml to use environment variables instead of env_file for configuration.

--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -7,15 +7,13 @@ services:
       dockerfile: deployments/Dockerfile
     ports:
       - "${PORT:-8080}:8080"
-    env_file:
-      - ../.env
     environment:
-      # MongoDB Configuration (MongoDB Atlas - External)
+      # MongoDB Configuration
       - MONGO_URI=${MONGO_URI}
       - MONGO_DATABASE=${MONGO_DATABASE}
       
       # Server Configuration
-      - PORT=${PORT}
+      - PORT=${PORT:-8080}
       
       # PayOS Configuration
       - PAYOS_CLIENT_ID=${PAYOS_CLIENT_ID}
