--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,33 +26,24 @@ jobs:
             cd /home/ubuntu/whisko-petcare
             git pull origin main
 
-            echo "Creating .env file from GitHub secrets..."
-            cat > .env << EOF
-            PORT=${{ secrets.PORT }}
-            MONGO_URI=${{ secrets.MONGO_URI }}
-            MONGO_DATABASE=${{ secrets.MONGO_DATABASE }}
-            PAYOS_CLIENT_ID=${{ secrets.PAYOS_CLIENT_ID }}
-            PAYOS_API_KEY=${{ secrets.PAYOS_API_KEY }}
-            PAYOS_CHECKSUM_KEY=${{ secrets.PAYOS_CHECKSUM_KEY }}
-            PAYOS_PARTNER_CODE=${{ secrets.PAYOS_PARTNER_CODE }}
-            PAYOS_BASE_URL=${{ secrets.PAYOS_BASE_URL }}
-            PAYOS_RETURN_URL=${{ secrets.PAYOS_RETURN_URL }}
-            PAYOS_CANCEL_URL=${{ secrets.PAYOS_CANCEL_URL }}
-            EOF
-
-            echo "Verifying .env file..."
-            ls -la .env
-            echo "First 3 lines of .env:"
-            head -n 3 .env
-
             echo "Stopping existing containers..."
             cd deployments
             docker-compose down
 
-            echo "Building and starting containers..."
+            echo "Building and starting containers with environment variables..."
+            PORT=${{ secrets.PORT }} \
+            MONGO_URI="${{ secrets.MONGO_URI }}" \
+            MONGO_DATABASE="${{ secrets.MONGO_DATABASE }}" \
+            PAYOS_CLIENT_ID="${{ secrets.PAYOS_CLIENT_ID }}" \
+            PAYOS_API_KEY="${{ secrets.PAYOS_API_KEY }}" \
+            PAYOS_CHECKSUM_KEY="${{ secrets.PAYOS_CHECKSUM_KEY }}" \
+            PAYOS_PARTNER_CODE="${{ secrets.PAYOS_PARTNER_CODE }}" \
+            PAYOS_BASE_URL="${{ secrets.PAYOS_BASE_URL }}" \
+            PAYOS_RETURN_URL="${{ secrets.PAYOS_RETURN_URL }}" \
+            PAYOS_CANCEL_URL="${{ secrets.PAYOS_CANCEL_URL }}" \
             docker-compose up -d --build
             
             echo "Checking container logs..."
-            docker-compose logs --tail=20
+            docker-compose logs --tail=30
 
             echo "✅ Deployed successfully!"
