--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -15,6 +15,10 @@ services:
       # Server Configuration
       - PORT=${PORT:-8080}
       
+      # JWT Configuration
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - JWT_TOKEN_DURATION=${JWT_TOKEN_DURATION:-24h}
+      
       # PayOS Configuration
       - PAYOS_CLIENT_ID=${PAYOS_CLIENT_ID}
       - PAYOS_API_KEY=${PAYOS_API_KEY}
