Add image upload support for entities
Introduces Cloudinary integration for image uploads on users, pets, vendors, and services. Updates command, aggregate, and event definitions to include imageUrl fields and adds UoW handlers for updating images. Enhances API documentation and environment configuration for Cloudinary, and updates controllers and service constructors to support image handling.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,10 @@ jobs:
             PAYOS_BASE_URL="${{ secrets.PAYOS_BASE_URL }}" \
             PAYOS_RETURN_URL="${{ secrets.PAYOS_RETURN_URL }}" \
             PAYOS_CANCEL_URL="${{ secrets.PAYOS_CANCEL_URL }}" \
+            CLOUDINARY_CLOUD_NAME="${{ secrets.CLOUDINARY_CLOUD_NAME }}" \
+            CLOUDINARY_API_KEY="${{ secrets.CLOUDINARY_API_KEY }}" \
+            CLOUDINARY_API_SECRET="${{ secrets.CLOUDINARY_API_SECRET }}" \
+            CLOUDINARY_FOLDER="${{ secrets.CLOUDINARY_FOLDER }}" \
             docker-compose up -d --build
             
             echo "Checking container logs..."
