--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -27,4 +27,10 @@ services:
       - PAYOS_BASE_URL=${PAYOS_BASE_URL}
       - PAYOS_RETURN_URL=${PAYOS_RETURN_URL}
       - PAYOS_CANCEL_URL=${PAYOS_CANCEL_URL}
+      
+      # Cloudinary Configuration
+      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+      - CLOUDINARY_FOLDER=${CLOUDINARY_FOLDER}
     restart: unless-stopped
