Add HTTPS Docker Compose setup with Nginx and Certbot
Introduces docker-compose-https.yml for HTTPS support using Nginx as a reverse proxy and Certbot for SSL certificate management. Updates the main docker-compose.yml to include Nginx and Certbot services, and adds a production-ready Nginx configuration file with HTTP to HTTPS redirection, SSL settings, and security headers.

--- a/deployments/docker-compose-https.yml
+++ b/deployments/docker-compose-https.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: deployments/Dockerfile
     expose:
       - "8080"
+    env_file:
+      - ../.env
     environment:
       # MongoDB Configuration
       - MONGO_URI=${MONGO_URI}
