--- a/deployments/nginx/nginx.conf
+++ b/deployments/nginx/nginx.conf
@@ -10,7 +10,7 @@ http {
     # Redirect HTTP to HTTPS
     server {
         listen 80;
-        server_name your-domain.com www.your-domain.com;
+        server_name api.whisko.com;
         
         # Allow certbot verification
         location /.well-known/acme-challenge/ {
@@ -26,11 +26,11 @@ http {
     # HTTPS Server
     server {
         listen 443 ssl http2;
-        server_name your-domain.com www.your-domain.com;
+        server_name api.whisko.com;
 
         # SSL Configuration
-        ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/api.whisko.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.whisko.com/privkey.pem;
         
         # SSL Security Settings
         ssl_protocols TLSv1.2 TLSv1.3;
