--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,10 +50,107 @@ jobs:
             CLOUDINARY_FOLDER=${{ secrets.CLOUDINARY_FOLDER }}
             EOF
 
-            echo "Building and starting containers..."
+            echo "📦 Installing/Updating Nginx and Certbot..."
+            sudo apt update
+            sudo apt install -y nginx certbot python3-certbot-nginx
+
+            echo "🔧 Configuring Nginx..."
+            sudo mkdir -p /var/www/certbot
+            
+            # Create Nginx configuration
+            sudo tee /etc/nginx/sites-available/whisko-api > /dev/null << 'NGINX_EOF'
+            # Redirect HTTP to HTTPS
+            server {
+                listen 80;
+                listen [::]:80;
+                server_name api.whisko.shop;
+
+                location /.well-known/acme-challenge/ {
+                    root /var/www/certbot;
+                }
+
+                location / {
+                    return 301 https://$host$request_uri;
+                }
+            }
+
+            # HTTPS Server
+            server {
+                listen 443 ssl http2;
+                listen [::]:443 ssl http2;
+                server_name api.whisko.shop;
+
+                # SSL Certificates
+                ssl_certificate /etc/letsencrypt/live/api.whisko.shop/fullchain.pem;
+                ssl_certificate_key /etc/letsencrypt/live/api.whisko.shop/privkey.pem;
+                
+                # SSL Configuration
+                ssl_protocols TLSv1.2 TLSv1.3;
+                ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+                ssl_prefer_server_ciphers off;
+                ssl_session_timeout 1d;
+                ssl_session_cache shared:SSL:50m;
+                ssl_session_tickets off;
+                
+                # Security Headers
+                add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+                add_header X-Frame-Options "SAMEORIGIN" always;
+                add_header X-Content-Type-Options "nosniff" always;
+                add_header X-XSS-Protection "1; mode=block" always;
+
+                # Request limits
+                client_max_body_size 20M;
+
+                # Logging
+                access_log /var/log/nginx/whisko-api-access.log;
+                error_log /var/log/nginx/whisko-api-error.log;
+
+                # Proxy to Go API
+                location / {
+                    proxy_pass http://localhost:8080;
+                    proxy_http_version 1.1;
+                    
+                    proxy_set_header Host $host;
+                    proxy_set_header X-Real-IP $remote_addr;
+                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $scheme;
+                    proxy_set_header X-Forwarded-Host $host;
+                    
+                    proxy_set_header Upgrade $http_upgrade;
+                    proxy_set_header Connection "upgrade";
+                }
+            }
+            NGINX_EOF
+
+            # Enable site
+            sudo rm -f /etc/nginx/sites-enabled/default
+            sudo ln -sf /etc/nginx/sites-available/whisko-api /etc/nginx/sites-enabled/
+
+            # Obtain SSL certificate if not exists
+            if [ ! -f /etc/letsencrypt/live/api.whisko.shop/fullchain.pem ]; then
+                echo "🔒 Obtaining SSL certificate..."
+                sudo systemctl stop nginx
+                sudo certbot certonly --standalone -d api.whisko.shop --email ${{ secrets.SSL_EMAIL }} --agree-tos --non-interactive || true
+            else
+                echo "✅ SSL certificate already exists"
+            fi
+
+            # Test Nginx configuration
+            sudo nginx -t
+
+            # Reload Nginx
+            sudo systemctl enable nginx
+            sudo systemctl restart nginx
+
+            echo "🐳 Building and starting containers..."
             docker-compose up -d --build
             
-            echo "Checking container logs..."
+            echo "📊 Checking container logs..."
             docker-compose logs --tail=30
 
-            echo "✅ Deployed successfully!"
+            echo "🔥 Configuring firewall..."
+            sudo ufw allow 'Nginx Full' || true
+            sudo ufw --force enable || true
+
+            echo "✅ Deployed successfully with HTTPS!"
+            echo "🌐 Access your API at: https://api.whisko.shop"
