--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Debug connection info
+        run: |
+          echo "🔍 Testing connection to EC2..."
+          echo "Host: ${{ secrets.EC2_HOST }}"
+          echo "User: ${{ secrets.EC2_USER }}"
+          echo "Testing ping..."
+          ping -c 4 ${{ secrets.EC2_HOST }} || true
+
       - name: Disable host key checking
-        run: echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh
+        run: |
+          mkdir -p ~/.ssh
+          echo -e "Host *\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile=/dev/null\n" > ~/.ssh/config
+          chmod 600 ~/.ssh/config
 
       - name: SSH Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -22,7 +33,13 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
+          timeout: 60s
+          command_timeout: 30m
+          debug: true
           script: |
+            echo "✅ SSH connection successful!"
+            echo "Current user: $(whoami)"
+            echo "Current directory: $(pwd)"
             cd /home/ubuntu/whisko-petcare
             git pull origin main
 
@@ -149,8 +166,18 @@ jobs:
             docker-compose logs --tail=30
 
             echo "🔥 Configuring firewall..."
+            # CRITICAL: Allow SSH FIRST to prevent lockout!
+            sudo ufw allow 22/tcp || true
+            sudo ufw allow OpenSSH || true
+            # Now allow HTTP/HTTPS
+            sudo ufw allow 80/tcp || true
+            sudo ufw allow 443/tcp || true
             sudo ufw allow 'Nginx Full' || true
+            # Enable firewall (SSH is already allowed, won't lock us out)
             sudo ufw --force enable || true
+            
+            echo "🔒 Firewall status:"
+            sudo ufw status || true
 
             echo "✅ Deployed successfully with HTTPS!"
             echo "🌐 Access your API at: https://api.whisko.shop"
