Set EC2 host IP directly in deploy workflow
Replaced the use of the EC2_HOST secret with a hardcoded IP address (16.176.194.232) for the SSH deploy step in the GitHub Actions workflow.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: SSH Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ secrets.EC2_HOST }}
+          host: 16.176.194.232
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           timeout: 60s
