--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ..
       dockerfile: deployments/Dockerfile
+    env_file:
+      - ../.env
     expose:
       - "8080"
     environment:
