Improve deployment and webhook handling
Added health check and container status output to the deploy workflow for better observability. Updated docker-compose to bind the app port to localhost and set memory limits, removing unused nginx and certbot services. Enhanced the payment webhook handler to properly respond to PayOS test/ping requests for easier webhook setup and verification.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -162,8 +162,17 @@ jobs:
             echo "🐳 Building and starting containers..."
             docker-compose up -d --build
             
+            echo "⏳ Waiting for containers to start..."
+            sleep 10
+            
+            echo "📊 Container status:"
+            docker-compose ps
+            
             echo "📊 Checking container logs..."
             docker-compose logs --tail=30
+            
+            echo "🔍 Testing API health..."
+            curl -f http://localhost:8080/health || echo "⚠️ API not responding yet"
 
             echo "🔥 Configuring firewall..."
             # CRITICAL: Allow SSH FIRST to prevent lockout!
