Add event-sourced payout domain and commands
Introduces payout aggregate, commands, events, and repository interfaces for event-sourced payout management. Updates vendor aggregate to support bank account information and related events. Adds necessary environment variables for PayOS payout/transfer integration in deployment configs.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,11 @@ jobs:
             PAYOS_BASE_URL=${{ secrets.PAYOS_BASE_URL }}
             PAYOS_RETURN_URL=${{ secrets.PAYOS_RETURN_URL }}
             PAYOS_CANCEL_URL=${{ secrets.PAYOS_CANCEL_URL }}
+            PAYOS_PAYOUT_CLIENT_ID=${{ secrets.PAYOS_PAYOUT_CLIENT_ID }}
+            PAYOS_PAYOUT_API_KEY=${{ secrets.PAYOS_PAYOUT_API_KEY }}
+            PAYOS_PAYOUT_CHECKSUM_KEY=${{ secrets.PAYOS_PAYOUT_CHECKSUM_KEY }}
+            PAYOS_TRANSFER_API_URL=${{ secrets.PAYOS_TRANSFER_API_URL }}
+            PAYOS_TRANSFER_WEBHOOK_URL=${{ secrets.PAYOS_TRANSFER_WEBHOOK_URL }}
             CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }}
             CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}
             CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}
