--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -30,6 +30,13 @@ services:
       - PAYOS_RETURN_URL=${PAYOS_RETURN_URL}
       - PAYOS_CANCEL_URL=${PAYOS_CANCEL_URL}
       
+      # PayOS Payout/Transfer Configuration
+      - PAYOS_PAYOUT_CLIENT_ID=${PAYOS_PAYOUT_CLIENT_ID}
+      - PAYOS_PAYOUT_API_KEY=${PAYOS_PAYOUT_API_KEY}
+      - PAYOS_PAYOUT_CHECKSUM_KEY=${PAYOS_PAYOUT_CHECKSUM_KEY}
+      - PAYOS_TRANSFER_API_URL=${PAYOS_TRANSFER_API_URL}
+      - PAYOS_TRANSFER_WEBHOOK_URL=${PAYOS_TRANSFER_WEBHOOK_URL}
+      
       # Cloudinary Configuration
       - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
       - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
